footer adds, changed links

--- a/bohn html-css/index.html
+++ b/bohn html-css/index.html
@@ -192,25 +192,25 @@
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (19).webp" alt="Anticelulitico">
                 <div class="treatment-buttons">
-                  <a href="" target="_blank">Comprar</a>
+                  <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (33).webp" alt="Grasa Localizada">
                 <div class="treatment-buttons">
-                  <a href="" target="_blank">Comprar</a>
+                  <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
             </div>          
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (48).webp" alt="Post Parto">
                 <div class="treatment-buttons">
-                  <a href="" target="_blank">Comprar</a>
+                  <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (34).webp" alt="Hifu Corporal">
                 <div class="treatment-buttons">
-                  <a href="" target="_blank">Comprar</a>
+                  <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
             </div>
         </div>
@@ -225,37 +225,37 @@
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (50).webp" alt="Rejuvenecimiento Facial">
                 <div class="treatment-buttons">
-                  <a href="" target="_blank">Comprar</a>
+                  <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (35).webp" alt="Hifu Facial Completo">
                 <div class="treatment-buttons">
-                  <a href="" target="_blank">Comprar</a>
+                  <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (37).webp" alt="Limpieza Facial Profunda">
                 <div class="treatment-buttons">
-                  <a href="" target="_blank">Comprar (1 sesión)</a>
+                  <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar (1 sesión)</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (40).webp" alt="Microneedling">
                 <div class="treatment-buttons">
-                  <a href="" target="_blank">Comprar</a>
+                  <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (36).webp" alt="Hollywood Peeling">
                 <div class="treatment-buttons">
-                  <a href="" target="_blank">Comprar</a>
+                  <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (47).webp" alt="Peeling Quimico">
                 <div class="treatment-buttons">
-                  <a href="" target="_blank">Comprar</a>
+                  <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
             </div>
         </div>
@@ -271,43 +271,43 @@
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (22).webp" alt="Depilacion Laser Pack Base">
                 <div class="treatment-buttons">
-                    <a href="" target="_blank">Comprar</a>
+                    <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (23).webp" alt="Depilacion Laser Pack Plus">
                 <div class="treatment-buttons">
-                    <a href="" target="_blank">Comprar</a>
+                    <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (2).webp" alt="Depilacion Laser TRIPACK FEM">
                 <div class="treatment-buttons">
-                    <a href="" target="_blank">Comprar</a>
+                    <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (42).webp" alt="Depilacion Laser ZONAS INTIMAS">
                 <div class="treatment-buttons">
-                    <a href="" target="_blank">Comprar</a>
+                    <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (9).webp" alt="Depilacion Laser ZONAS PEQUEÑAS ROSTRO">
                 <div class="treatment-buttons">
-                    <a href="" target="_blank">Comprar</a>
+                    <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (1).webp" alt="Depilacion Laser ROSTRO COMPLETO">
                 <div class="treatment-buttons">
-                    <a href="" target="_blank">Comprar</a>
+                    <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (21).webp" alt="Depilacion Laser CUERPO COMPLETO">
                 <div class="treatment-buttons">
-                    <a href="" target="_blank">Comprar</a>
+                    <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
             </div>
         </div>
@@ -318,25 +318,25 @@
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (45).webp" alt="Depilacion Laser Pack Base MASC">
                 <div class="treatment-buttons">
-                    <a href="" target="_blank">Comprar</a>
+                    <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (46).webp" alt="Depilacion Laser Pack Plus MASC">
                 <div class="treatment-buttons">
-                    <a href="" target="_blank">Comprar</a>
+                    <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (3).webp" alt="Depilacion Laser TRIPACK MASC">
                 <div class="treatment-buttons">
-                    <a href="" target="_blank">Comprar</a>
+                    <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (20).webp" alt="Depilacion Laser Barba y Cuello MASC">
                 <div class="treatment-buttons">
-                    <a href="" target="_blank">Comprar</a>
+                    <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
             </div>
             </div>
@@ -347,35 +347,34 @@
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (11).webp" alt="Depilacion Laser 2 ZONAS">
                 <div class="treatment-buttons">
-                    <a href="" target="_blank">Comprar</a>
+                    <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
-                <img src="./assets/treatments/imgs (17).webp" alt="Depilacion Laser 3 ZONAS">
+                <img src="./assets/treatments/imgs (13).webp" alt="Depilacion Laser 3 ZONAS">
                 <div class="treatment-buttons">
-                    <a href="" target="_blank">Comprar</a>
+                    <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (15).webp" alt="Depilacion Laser 4 ZONAS">
                 <div class="treatment-buttons">
-                    <a href="" target="_blank">Comprar</a>
+                    <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (8).webp" alt="Depilacion Laser XS">
                 <div class="treatment-buttons">
-                    <a href="" target="_blank">Comprar</a>
+                    <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (10).webp" alt="info zonas XS">
             </div>
-
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (6).webp" alt="Depilacion Laser S">
                 <div class="treatment-buttons">
-                    <a href="" target="_blank">Comprar</a>
+                    <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
@@ -385,7 +384,7 @@
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (5).webp" alt="Depilacion Laser M">
                 <div class="treatment-buttons">
-                    <a href="" target="_blank">Comprar</a>
+                    <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
@@ -395,7 +394,7 @@
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (4).webp" alt="Depilacion Laser L">
                 <div class="treatment-buttons">
-                    <a href="" target="_blank">Comprar</a>
+                    <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
@@ -405,7 +404,7 @@
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (7).webp" alt="Depilacion Laser XL">
                 <div class="treatment-buttons">
-                    <a href="" target="_blank">Comprar</a>
+                    <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
@@ -426,10 +425,10 @@
                 <img src="./assets/treatments/imgs (41).webp" alt="Nutrición">
                 </div>
                 <div class="treatment-buttons-two">
-                  <a href="" target="_blank">Comprar Consulta de Control</a>
+                  <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar Consulta de Control</a>
                 </div>
                 <div class="treatment-buttons"> 
-                  <a href="" target="_blank">Comprar Primera Consulta</a> 
+                  <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar Primera Consulta</a> 
                 </div>
             </div>
         </div>
@@ -444,10 +443,10 @@
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (39).webp" alt="Masajes Descontracturantes">
                 <div class="treatment-buttons-two">
-                  <a href="" target="_blank">Comprar Pack 2 Sesiones</a>
+                  <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar Pack 2 Sesiones</a>
                 </div>
                 <div class="treatment-buttons"> 
-                  <a href="" target="_blank">Comprar 1 sesión</a>
+                  <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar 1 sesión</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
@@ -456,7 +455,7 @@
                   <a href="" target="_blank">Comprar Pack 2 Sesiones</a>
                 </div>
                 <div class="treatment-buttons">
-                  <a href="" target="_blank">Comprar 1 sesión</a> 
+                  <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar 1 sesión</a> 
                 </div>
             </div>
         </div>
@@ -471,13 +470,13 @@
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (43).webp" alt="Pack Novia Base">
                 <div class="treatment-buttons">
-                  <a href="" target="_blank">Comprar</a>
+                  <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (44).webp" alt="Pack Novia Plus">
                 <div class="treatment-buttons">
-                  <a href="" target="_blank">Comprar</a>
+                  <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
             </div>
         </div>
@@ -493,25 +492,25 @@
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (24).webp" alt="Gift Card 51000">
                 <div class="treatment-buttons">
-                  <a href="https://wa.me/56932066518" target="_blank">Comprar Gift Card $51.000</a>
+                  <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar Gift Card $51.000</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (25).webp" alt="Gift Card 56000">
                 <div class="treatment-buttons">
-                  <a href="https://wa.me/56932066518" target="_blank">Comprar Gift Card $56.000</a>
+                  <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar Gift Card $56.000</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (26).webp" alt="Gift Card 61000">
                 <div class="treatment-buttons">
-                  <a href="https://wa.me/56932066518" target="_blank">Comprar Gift Card $61.000</a>
+                  <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar Gift Card $61.000</a>
                 </div>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (27).webp" alt="Gift Card 50000">
                 <div class="treatment-buttons">
-                  <a href="" target="_blank">Comprar Gift Card precio $30.000 (canjeable por una limpieza facial profunda o una sesión de masajes relajantes/descontracturantes o $50.000 de bono para otros tratamientos)</a>
+                  <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar Gift Card precio $30.000 (canjeable por una limpieza facial profunda o una sesión de masajes relajantes/descontracturantes o $50.000 de bono para otros tratamientos)</a>
                 </div>
             </div>
         </div>
@@ -527,7 +526,7 @@
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (49).webp" alt="Referidos">
                 <div class="treatment-buttons">
-                  <a href="https://wa.me/56932066518" target="_blank">Comprar</a>
+                  <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
             </div>
         </div>
@@ -581,7 +580,9 @@
             </div>
         </div>
     </section>
-
+    <div class="row" style="font-size:0.8em; padding: 5px; display: flex; justify-content: center;">
+        FB Copyright © 2023 FB - Todos los derechos reservados || <a href= https://wa.me/5493513312257 target="_blank">Diseño web: BohnFlorencia</a>
+    </div>
     <!-- reload page = scroll in 0 -->
     <script>
         window.addEventListener('beforeunload', function () {
