--- a/bohn html-css/index.html
+++ b/bohn html-css/index.html
@@ -243,7 +243,7 @@
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (37).webp" alt="Limpieza Facial Profunda">
                 <div class="treatment-buttons">
-                  <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar (1 sesión)</a>
+                  <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
                 <small style="text-shadow: 2px 2px 4px #c7c7c4; color: black;">*Haz click y coloca el monto del servicio seleccionado</small>
             </div>
@@ -452,7 +452,7 @@
                 <img src="./assets/treatments/imgs (41).webp" alt="Nutrición">
                 </div>
                 <div class="treatment-buttons"> 
-                  <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar Primera Consulta</a> 
+                  <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a> 
                 </div>
                 <small style="text-shadow: 2px 2px 4px #c7c7c4; color: black;">*Haz click y coloca el monto del servicio seleccionado</small>
             </div>
@@ -536,9 +536,9 @@
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (27).webp" alt="Gift Card 50000">
                 <div class="treatment-buttons">
-                  <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar Gift Card precio $30.000 (canjeable por una limpieza facial profunda o una sesión de masajes relajantes/descontracturantes o $50.000 de bono para otros tratamientos)</a>
+                  <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar Gift Card precio $30.000</a>
                 </div>
-                <small style="text-shadow: 2px 2px 4px #c7c7c4; color: black;">*Haz click y coloca el monto del servicio seleccionado</small>
+                <small style="text-shadow: 2px 2px 4px #c7c7c4; color: black;">*Canjeable por una limpieza facial profunda o una sesión de masajes relajantes/descontracturantes o $50.000 de bono para otros tratamientos | *Haz click y coloca el monto del servicio seleccionado</small>
             </div>
         </div>
 
