--- a/bohn html-css/index.html
+++ b/bohn html-css/index.html
@@ -190,28 +190,21 @@
         <!-- tratamientos corporales -->
         <div class="content-section"> 
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
-                <img src="./assets/treatments/imgs (19).webp" alt="Anticelulitico">
+                <img src="./assets/treatments/Anticelulítico.webp" alt="Anticelulitico">
                 <div class="treatment-buttons">
                   <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
                 <small style="text-shadow: 2px 2px 4px #c7c7c4; color: black;">*Haz click y coloca el monto del servicio seleccionado</small>
-            </div>
-            <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
-                <img src="./assets/treatments/imgs (33).webp" alt="Grasa Localizada">
-                <div class="treatment-buttons">
-                  <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
-                </div>
-                <small style="text-shadow: 2px 2px 4px #c7c7c4; color: black;">*Haz click y coloca el monto del servicio seleccionado</small>
-            </div>          
-            <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
-                <img src="./assets/treatments/imgs (48).webp" alt="Post Parto">
-                <div class="treatment-buttons">
-                  <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
-                </div>
-                <small style="text-shadow: 2px 2px 4px #c7c7c4; color: black;">*Haz click y coloca el monto del servicio seleccionado</small>
-            </div>
+            </div>        
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <img src="./assets/treatments/imgs (34).webp" alt="Hifu Corporal">
+                <div class="treatment-buttons">
+                  <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
+                </div>
+                <small style="text-shadow: 2px 2px 4px #c7c7c4; color: black;">*Haz click y coloca el monto del servicio seleccionado</small>
+            </div>
+            <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
+                <img src="./assets/treatments/HIFU 7D + LIPOLASER.webp" alt="Hifu + lipolaser">
                 <div class="treatment-buttons">
                   <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
@@ -227,21 +220,21 @@
         <!-- facial -->
         <div class="content-section" > 
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
-                <img src="./assets/treatments/imgs (50).webp" alt="Rejuvenecimiento Facial">
+                <img src="./assets/treatments/REJUVENECIMIENTO FACIAL.webp" alt="Rejuvenecimiento Facial">
                 <div class="treatment-buttons">
                   <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
                 <small style="text-shadow: 2px 2px 4px #c7c7c4; color: black;">*Haz click y coloca el monto del servicio seleccionado</small>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
-                <img src="./assets/treatments/imgs (35).webp" alt="Hifu Facial Completo">
+                <img src="./assets/treatments/Hifu Facial 7D.webp" alt="Hifu Facial Completo">
                 <div class="treatment-buttons">
                   <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
                 <small style="text-shadow: 2px 2px 4px #c7c7c4; color: black;">*Haz click y coloca el monto del servicio seleccionado</small>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
-                <img src="./assets/treatments/imgs (37).webp" alt="Limpieza Facial Profunda">
+                <img src="./assets/treatments/Limpieza Profunda.webp" alt="Limpieza Facial Profunda">
                 <div class="treatment-buttons">
                   <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
@@ -255,7 +248,7 @@
                 <small style="text-shadow: 2px 2px 4px #c7c7c4; color: black;">*Haz click y coloca el monto del servicio seleccionado</small>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
-                <img src="./assets/treatments/imgs (36).webp" alt="Hollywood Peeling">
+                <img src="./assets/treatments/Hollywood Peeling .webp" alt="Hollywood Peeling">
                 <div class="treatment-buttons">
                   <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
@@ -279,14 +272,14 @@
         <div class="content-section" id="depilation-fem"> 
             <!-- depilacion femenina -->
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
-                <img src="./assets/treatments/imgs (22).webp" alt="Depilacion Laser Pack Base">
+                <img src= "./assets/treatments/Depilación Laser Pack Base.webp" alt="Depilacion Laser Pack Base">
                 <div class="treatment-buttons">
                     <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
                 <small style="text-shadow: 2px 2px 4px #c7c7c4; color: black;">*Haz click y coloca el monto del servicio seleccionado</small>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
-                <img src="./assets/treatments/imgs (23).webp" alt="Depilacion Laser Pack Plus">
+                <img src="./assets/treatments/Depilación Base Pack Plus.webp" alt="Depilacion Laser Pack Plus">
                 <div class="treatment-buttons">
                     <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
@@ -466,14 +459,14 @@
             <!-- masajes -->
         <div class="content-section"> 
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
-                <img src="./assets/treatments/imgs (39).webp" alt="Masajes Descontracturantes">
+                <img src="./assets/treatments/Masajes Descontracurantes .webp" alt="Masajes Descontracturantes">
                 <div class="treatment-buttons"> 
                   <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
                 <small style="text-shadow: 2px 2px 4px #c7c7c4; color: black;">*Haz click y coloca el monto del servicio seleccionado</small>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
-                <img src="./assets/treatments/imgs (38).webp" alt="Masajes Relajantes">
+                <img src="./assets/treatments/Masajes Relajantes.webp" alt="Masajes Relajantes">
                 <div class="treatment-buttons">
                   <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a> 
                 </div>
