--- a/bohn html-css/index.html
+++ b/bohn html-css/index.html
@@ -434,13 +434,13 @@
         </div>
     
         <!-- titulo -->
-        <div class="title" id="nutrition-section">
+        <!-- <div class="title" id="nutrition-section">
             <span>
                NUTRICIÓN
             </span>
-        </div>
+        </div> -->
         <!-- Nutricion -->
-        <div class="content-section"> 
+        <!-- <div class="content-section"> 
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
                 <div>
                 <img src="./assets/treatments/imgs (41).webp" alt="Nutrición">
@@ -450,7 +450,7 @@
                 </div>
                 <small style="text-shadow: 2px 2px 4px #c7c7c4; color: black;">*Haz click y coloca el monto del servicio seleccionado</small>
             </div>
-        </div>
+        </div> -->
         <!-- titulo -->
         <!-- <div class="title" id="massage-section">
             <span>
