--- a/bohn html-css/index.html
+++ b/bohn html-css/index.html
@@ -65,14 +65,13 @@
                             </ul>
                         </li>
                         <!-- <li>
-                            <a href='#massage-section'>Masajes</a>
-                        </li>
-                        <li>
                             <a href='#bride-section'>Novias</a>
                         </li> -->
                     </ul>
                 </li>
-
+                <li class="agenda">
+                    <a href='https://bohnclinicaestetica.site.agendapro.com/cl/sucursal/2103' target="_blank">Agendá tu hora</a>
+                </li> 
                 <!-- other items of navbar  -->
                 <li class="cards">
                     <a href='#card-section'>Gift Cards</a>
