--- a/bohn html-css/index.html
+++ b/bohn html-css/index.html
@@ -237,6 +237,14 @@
                 </div>
                 <small style="text-shadow: 2px 2px 4px #c7c7c4; color: black;">*Haz click y coloca el monto del servicio seleccionado</small>
             </div>
+            <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
+                <img src="./assets/treatments/Hifu 7D + Lipolase 2 zonas a elección.webp" alt="Hifu + lipolaser">
+                <div class="treatment-buttons">
+                  <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
+                </div>
+                <small style="text-shadow: 2px 2px 4px #c7c7c4; color: black;">*Haz click y coloca el monto del servicio seleccionado</small>
+            </div>
+            
         </div>
         <!-- titulo -->
         <div class="title" id="facial-section" >
