--- a/bohn html-css/index.html
+++ b/bohn html-css/index.html
@@ -231,14 +231,14 @@
                 <small style="text-shadow: 2px 2px 4px #c7c7c4; color: black;">*Haz click y coloca el monto del servicio seleccionado</small>
             </div>        
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
-                <img src="./assets/treatments/HIFU 7D + LIPOLASER.webp" alt="Hifu + lipolaser">
+                <img src="./assets/treatments/HIFU 7D LIPOLASER.webp" alt="Hifu + lipolaser">
                 <div class="treatment-buttons">
                   <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
                 <small style="text-shadow: 2px 2px 4px #c7c7c4; color: black;">*Haz click y coloca el monto del servicio seleccionado</small>
             </div>
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
-                <img src="./assets/treatments/Hifu 7D + Lipolase 2 zonas a elección.webp" alt="Hifu + lipolaser">
+                <img src="./assets/treatments/Hifu 7D + Lipolase 2 zonas a elección.webp" alt="Hifu + lipolaser 2 zonas">
                 <div class="treatment-buttons">
                   <a href="https://micrositios.getnet.cl/bohnestetica" target="_blank">Comprar</a>
                 </div>
@@ -579,7 +579,7 @@
         <!-- referidos -->
         <div class="content-section">
             <div class="treatment-item" data-aos="zoom-in-up" data-aos-duration="2000">
-                <img src="./assets/treatments/imgs (49).webp" alt="Referidos">
+                <img src="./assets/treatments/REFERIDOS.webp" alt="Referidos">
                 <div class="treatment-buttons">
                   <a href="https://wa.me/56932066518" target="_blank">Referir</a>
                 </div>
