--- a/bohn html-css/index.html
+++ b/bohn html-css/index.html
@@ -197,7 +197,7 @@
                 <div class="custom-model-wrap">
                     <div class="pop-up-content-wrap">
                         <h1> Te brindamos asesoramiento para que alcances tus objetivos y te conviertas en la mejor versión de ti mismo. Buscaremos el tratamiento más adecuado para ti.
-                            <span>Duración: 15 min &amp; Agenda tu hora!</span>.
+                            <span>Duración: 15 min </span>
                         </h1>
                         <img class="logo-pop" src="./assets/sinfondo-1-01.png" alt="logo">
                         <div class="title-pop">
